<resources>
    <string name="app_name">Tally Time</string>
    <string name="select_calendars">Select calendars</string>
    <string name="requires_play_services">"This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app."</string>
    <string name="no_network">No network connection available.</string>
    <string name="no_results">No results returned.</string>
    <string name="the_following_error_occured">The following error occurred:\n</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="get_hours">Get hours</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="select_week">Select week</string>
    <string name="no_calendars_selected">No calendars selected</string>
    <string name="selected_week">Selected week:</string>
    <string name="add_to_drive">Add to drive</string>
    <string name="hours_results_title">Hours:</string>

    <!--AuthUiActivity-->
    <string name="title_activity_auth">Sign in</string>
    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_out_failed">Sign out failed</string>

</resources>
